# goblin-design-system

./: .gitignore  AGENT.md  AGENTS.md  BACKLOG.md  README.md  index.html  overlay.html  package.json  plan.md  tsconfig.lib.json  vite.config.ts  vite.lib.config.ts
.github/workflows/: ci.yml  release.yml
skills/: SKILL.md
skills/references/: behaviour.md  buttons.md  data-display.md  feedback.md  forms.md  icons.md  inputs.md  layout.md  navigation.md  overlays.md  setup.md  tauri.md  tokens.md  waveform.md
src/: app.css  main.ts  overlay-app.css  overlay.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: base.css  components.css  index.ts  theme.ts  tokens.css
src/lib/headless/: accordion.ts  alert.ts  context-menu.ts  date-picker.ts  dom.ts  drawer.ts  focus-trap.ts  modal.ts  multi-select.ts  navigation.ts  pagination.ts  popover.ts  radial.ts  range.ts  rating.ts  search.ts  select.ts  split-pane.ts  stepper.ts  switch.ts  table.ts  tabs.ts  text-field.ts  toast.ts  toggle-group.ts  tooltip.ts  transfer-list.ts  tree.ts
src/lib/icons/: index.ts
src/lib/platform/: tauri-window.ts
src/lib/waveform/: waveform.ts
